--- a/style.css
+++ b/style.css
@@ -9,14 +9,21 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: sans-serif;
 }
 
-body {
+.container {
     min-width: 100vw;
     min-height: 100vh;
     display: flex;
-    justify-content: center;
+    padding: 0 10%;
+    justify-content: space-evenly;
     align-items: center;
+    background-color: #333;
+}
+
+.container.invert {
+    filter: invert(1);
 }
 
 .game {
@@ -28,7 +35,30 @@ body {
 }
 
 .control {
+    height: 80vmin;
     width: 20vmin;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    color: #ddd;
+}
+
+.control>h1 {
+    font-size: 3rem;
+    margin-bottom: 100px;
+}
+
+.control>span {
+    font-size: 2rem;
+}
+
+.mode {
+    border: none;
+    padding: 10px 20px;
+    outline: none;
+    border-radius: 10px;
 }
 
 .body.head {
